[package]
name = "pong-wasm"
version = "0.1.0"
authors = ["Sachin Iyer"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1.6", optional = true }
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.4.0" }
getrandom = { version = "0.2", features = ["js"] }
serde_json = "1.0.117"
serde = "1.0.201"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'console',
    'Document',
    'HtmlElement',
    'HtmlInputElement',
    'MessageEvent',
    'Storage',
    'Window',
    'Worker',
]
